# NeMo

./: .gitignore  CMakeLists.txt
libs/model_reader_2/: CMakeLists.txt  main.cpp
libs/model_reader_2/include/: tn_json_parser.hh
libs/model_reader_2/src/: tn_json_parser.cpp  utils.cpp  utils.hh
scripts/: nemo__spike.csv  parse_tn_evt_trace.py  read_tn_json.py  tn_json_readers.py  tn_nf2_api.py
scripts/sobel/: sobel_spike.csv
scripts/test/neil2/: mnist_model.nfg1
src/: globals.h  nemo_main.c
src/IO/: IOStack.h  neuron_output.c
src/multichip-workloads/: model-net-nemo-fattree.c
src/neuro/: axon.c  synapse.c  tn_neuron.c  tn_neuron.h
